trunk/Archive2/35/3a80c0963bf861/output
main.cpp:6:20: error: too many decimal points in number
         <IPAddress>123.45.67</IPAddress>
                    ^
main.cpp:13:30: warning: missing terminating ' character
         <manufacturer>joe bob's machines</manufacturer>
                              ^
main.cpp:13:9: error: missing terminating ' character
         <manufacturer>joe bob's machines</manufacturer>
         ^
main.cpp:15:20: error: too many decimal points in number
         <IPAddress>980.123.912.5</IPAddress>
                    ^
main.cpp:16:18: error: invalid digit "8" in octal constant
         <modelNo>05348437</modelNo>
                  ^
main.cpp:1:1: error: expected unqualified-id before '<' token
 <parent>
 ^
