trunk/Archive2/35/3a80c0963bf861/main.cpp
<parent>
    <child>
        <isLocal>true</isLocal>
        <manufacturer>wheel wells</manufacturer>
        <modelName>super wheel</modelName>
        <IPAddress>123.45.67</IPAddress>
        <modelNo>52</modelNo>
        <modelUrl>wheelwells.com</modelUrl>
        <serialNo>98dfgaijfw</serialNo>
    </child>
    <child>
        <isLocal>false</isLocal>
        <manufacturer>joe bob's machines</manufacturer>
        <modelName>modelname</modelName>
        <IPAddress>980.123.912.5</IPAddress>
        <modelNo>05348437</modelNo>
        <modelUrl>mysite.com</modelUrl>
        <serialNo>12387ifj2837418</serialNo>
    </child>
</parent>